--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,38 @@ dependencies:
 
   cupertino_icons: ^1.0.2
 
+  #Icon Provider
+  flutter_svg: ^1.1.6
+
+  #JsonAnnotation
+  json_annotation: ^4.7.0
+
+  #FreezedAnnotation
+  freezed_annotation: ^2.2.0
+
+  #Network
+  dio: ^4.0.6
+  connectivity_plus: ^3.0.2
+  
+  #State Management
+  mobx: ^2.1.3
+  flutter_mobx: ^2.0.6+5
+  mobx_codegen: ^2.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+  #Route Generator
+  auto_route_generator: ^5.0.3
+
+  #Code Generator
+  build_runner: ^2.3.3
+
+  #Model Files Generator
+  json_serializable: ^6.5.4
+  freezed: ^2.3.2
 
 flutter:
   fonts:
