# updated app draft

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,12 @@ dependencies:
   #Icon Provider
   flutter_svg: ^1.1.6
 
+  #Responsive
+  responsive_sizer: ^3.1.1
+
+  #Extensions
+  kartal: ^2.7.0
+
   #JsonAnnotation
   json_annotation: ^4.7.0
 
