--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   #Design
   sensors_plus: ^2.0.1
   flutter_rating_bar: ^4.0.1
+  lottie: ^2.2.0
 
   #JsonAnnotation
   json_annotation: ^4.7.0
