--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,27 @@ dev_dependencies:
   json_serializable: ^6.5.4
   freezed: ^2.3.2
 
+  #Application Icon
+  flutter_launcher_icons: ^0.11.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/app_icon.png"
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: "assets/images/app_icon.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/images/app_icon.png"
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: "assets/images/app_icon.png"  
+
 flutter:
   fonts:
     - family: MonaSans
